# mavsniff

./: .editorconf  .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc  README.md  changelog.md  commitlint.config.js  pyproject.toml
.github/workflows/: build-and-test.yml  delivery.yml  get-version.yml  pre-release.yml  release-python.yml  release.yml  test.yml
mavsniff/: __main__.py  capture.py  replay.py
mavsniff/commands/: capture.py  ports.py  replay.py  wsplugin.py
mavsniff/utils/: ip.py  mav.py
src/mavsniff/: __version__.py  capture.py  replay.py
src/mavsniff/commands/: capture.py  replay.py  wsplugin.py
src/mavsniff/utils/: ip.py
tests/: test_all.py
tests/dialects/: my-drontag.xml
