[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mavsniff"
version = "1.0.0"
repository = "https://github.com/dronetag/mavsniff"
authors = [
  "Tomas Peterka <tomas.peterka@dronetag.cz>",
]
description = "Mavsniff enables you to capture and replay MAVLink communication over serial line or network"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
pymavlink = "^2.4.20"
pyserial = "^3.5"
python-pcapng = "^2.1.1"
pytest = {version="*", optional=true}
wheel = {version="*", optional=true}
mypy = {version="*", optional=true}
pyflakes = {version="*", optional=true}

[tool.poetry.scripts]
mavsniff = "mavsniff:__main__"

[tool.poetry.extras]
dev = ["wheel", "pytest", "mypy", "pyflakes"]

[tool.mypy]
follow_imports = "skip"
