[build-system]
requires = ["setuptools >= 59.0"]  # other build dependencies e.g. "mypy-protobuf >= 3.0.0"
build-backend = "setuptools.build_meta"

[project]
name = "mavsniff"
requires-python = ">=3.8"
authors = [
   {name = "Tomas Peterka", email="tomas.peterka@dronetag.cz"}
]
description = "Mavsniff enables you to capture and replay MAVLink communication over serial line or network"
license.text = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "click",
  "pymavlink ==2.4.20",
  "pyserial ==3.5",
  "python-pcapng ==2.1.1",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "mavsniff.__version__.version"}
readme = {file = ["README.md"]}

[project.urls]
Homepage = "https://github.com/dronetag/mavsniff"

[project.scripts]
mavsniff = "mavsniff:__main__"

[project.optional-dependencies]
dev = [
  "wheel",
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "pre-commit",
]

[tool.mypy]
follow_imports = "skip"

[tool.coverage.run]
source = ["src"]
omit = [
  "src/mavsniff/__main__.py",
  "src/mavsniff/commands/*",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "I"]  # F: pyflakes, E: pycodestyle, I: isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
# we use pyright for type checking because it is built into VScode. Preferably in
# strict mode. You can omit single lines in code by adding # type: ignore
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.8"  # might be good idea to set minimal python version
